_include/services: Add gist.html - Usage: {% include services/gist.html src="" %}

--- a/_posts/2018-08-29-cpp-if.md
+++ b/_posts/2018-08-29-cpp-if.md
@@ -13,7 +13,7 @@ ads: true
 C++에서의 조건문은 if, switch가 있으며, 이 문법들은 모두 C언어에서 사용되던 것들과 동일합니다.
 
 ## IF 예제
-<script src="https://gist.github.com/opnay/dab3805902f319d9caf5505211095611.js"></script>
+{% include services/gist.html src="dab3805902f319d9caf5505211095611" %}
 <br>
 
 ## IF 결과
@@ -36,7 +36,7 @@ B는 0보다 큽니다.
 <hr>
 
 ## Switch 예제
-<script src="https://gist.github.com/opnay/0f89cf43c31dd798ddf76eaa50b1efb1.js"></script>
+{% include services/gist.html src="0f89cf43c31dd798ddf76eaa50b1efb1" %}
 <br>
 
 ## Switch 결과
